--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,9 @@
 # io
 # csv
 
-Django>=4.0,<5.0
-matplotlib>=3.5
-numpy>=1.21
-scipy>=1.7
-pytest>=7.0
+Django>=4.0,<5.0          # Framework web
+matplotlib>=3.5           # Generación de gráficos
+numpy>=1.21               # Cálculos numéricos
+scipy>=1.7                # Optimización (linprog)
+pandas>=1.3               # Manipulación de datos (CSV)
+pytest>=7.0               # Framework de testing
